======================== 2.24.1 ===========================

2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update again. 
	* configure.in: 2.24.1.

2008-09-22  Michael J. Chudobiak  <mjc@svn.gnome.org>

	* schemas/desktop_gnome_thumbnail_cache.schemas.in:
	Made the housekeeping plugin less aggressive by default (bug #552680).
	Code freeze break approved by release team.

======================= 2.24.0 ==============================
2008-09-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version.

======================= 2.23.92 =============================

2008-09-12  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-sound.c: Include <poll.h> only if HAVE_ESD as
	poll() is used only if HAVE_ESD.

2008-09-08  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnome/Makefile.am:
	* libgnome/gnome-open.c: (main): Port gnome-open to GIO. Bug #530752,
	patch by Jean-Yves Lefort.

2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Revert this since it broke the build.

2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Patch from OpenSUSE to fix uninitialized var. Closes 
	bug #543570. (Rodrigo Moya)

====================== 2.23.5 =======================

2008-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* libgnome/gnome-sound.c (send_all): More robustification.

2008-07-22  Lennart Poettering   <lpoetter@redhat.com>

	Fixes bug #541420

	* schemas/desktop_gnome_sound.schemas.in: add two new event sounds
	settings to gconf schema files.

2008-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* libgnome/gnome-sound.c (send_all): Check for EAGAIN too (thanks
	to Morten for pointing this out).

2008-07-09  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #542296

	* libgnome/gnome-sound.c (gnome_sound_sample_load): Poll the esd
	connection to check that it's still alive. Set it to -1 if it's
	not.