@@ -1,3 +1,9 @@
+2008-09-25  Tor Lillqvist  <tml@novell.com>
+
+	* libgnome/dllmain.c (gnome_win32_get_prefixes): Drop the Win9x
+	code path. There is no Win9x support any more lower in the stack
+	anyway.
+
 ======================== 2.24.1 ===========================
 
 2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>
